src/components/DMPanel/DMPanel.scss
@import '../../Colors.scss';

#DMPanel {
  #DTitleBar, #UsersContainer, #UsersList {
    background-color: $background-secondary;
  }
  #DMLabel {
    font-weight: bold;
    font-size: 12px;
    margin-bottom: 4px;
    margin-left: 5px;
    color: $channels-default;
    text-transform: uppercase;
  }
}

#DMPanel, #ChannelsList {
  QScrollBar {
    height: 8px;
    width: 8px;
    background-color: transparent;
    border: 2px solid $background-secondary;
    border-radius: 4px;
    &::handle {
      background-color: $scrollbar-thin-thumb;
      border-radius: 4px;
    }
    &::add-line {
      height: 0px;
    }
    &::sub-line {
      height: 0px;
    }
  }
}

